syntax = "proto3";
option java_package = "com.quancheng.examples.service";
option java_outer_classname = "HelloServiceProto2";
package com.quancheng.examples.service;
import "example/hello.proto";
service HelloService {
    rpc sayHello (com.quancheng.examples.model.HelloRequest) returns (com.quancheng.examples.model.HelloReply) {}
    
    rpc sayHelloStream (com.quancheng.examples.model.HelloRequest) returns (stream com.quancheng.examples.model.HelloReply) {}
}